Alt færdigt. burgermenu styling fixed, scroll body overflow hidden lavet.

--- a/style.css
+++ b/style.css
@@ -33,6 +33,10 @@ header {
     display: none;
 }
 
+.overflow {
+    overflow: hidden;
+}
+
 /* Overordnede generelle indstillinger SLUT  */
 
 /* Menu desktop -menu-sidebar- START */
@@ -57,6 +61,12 @@ header {
     cursor: pointer;
     display: none;
 
+}
+
+
+#menu-sidebar ul {
+
+    margin-left: 25px;
 }
 
 #menu-sidebar a {
@@ -157,7 +167,7 @@ ul {
     margin: 0 auto;
     list-style-type: none;
     padding: 0;
-    margin-left: 25px;
+
 
 }
 
@@ -229,12 +239,13 @@ nav {}
 }
 
 #menuMobil {
-    position: absolute;
+    position: fixed;
     width: 100vw;
+    height: 100vh;
     min-height: 500px;
     background-color: #b0cba5;
     z-index: 5000;
-    position: absolute;
+
     top: 0;
     padding: 20px;
     transform-origin: 0% 0%;
@@ -242,6 +253,7 @@ nav {}
     transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
     float: right;
     right: 0;
+    margin: 0 auto;
 }
 
 
@@ -285,6 +297,7 @@ nav {}
     margin-bottom: 20px;
     float: right;
     text-align: right;
+
 }
 
 /* de tre div'er som bliver til burgermenu knappen */
@@ -867,6 +880,7 @@ footer p {
 
 
     #menu-siderbar li {
+
         padding-top: 20px;
         margin-top: 20px;
     }
